welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:2: error: value Black is not a member of object java.awt.Color
var c=Color.Black 
            ^MethodsPicture:10: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
	setCouleurBrosse();
                        ^MethodsPicture:26: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
faireV();
      ^